[gd_scene load_steps=4 format=3 uid="uid://dujcthgah2bih"]

[ext_resource type="Script" path="res://Scripts/PlayerController.gd" id="1_83icm"]
[ext_resource type="Texture2D" uid="uid://d0tccgeljrf8a" path="res://Assets/icon.svg" id="1_fc6fj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kqfrp"]
radius = 63.0
height = 170.0

[node name="Player" type="Node2D"]
script = ExtResource("1_83icm")

[node name="Sprite" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("1_fc6fj")

[node name="PlayerHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
position = Vector2(64, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_kqfrp")

[connection signal="area_entered" from="PlayerHitbox" to="." method="_on_player_hitbox_area_entered"]
[connection signal="area_exited" from="PlayerHitbox" to="." method="_on_player_hitbox_area_exited"]
